Changing theme name

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Theme Name: Shiver Me Timbers Theme
+ * Description: Arrrr, this be a theme to start yuh off on yer travels!
+ * Author: Upstatement, Artlytical Media, and YOU!
 */
